--- a/package.json
+++ b/package.json
@@ -11,14 +11,29 @@
   "author": "Tian Zhi",
   "license": "ISC",
   "dependencies": {
+    "@types/history": "^4.7.2",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "antd": "^3.11.6",
+    "connected-react-router": "^6.0.0",
+    "history": "^4.7.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^2.1.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
+    "ts-import-plugin": "^1.5.5",
     "typescript": "^3.2.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
