--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
-        "module": "commonjs",
+        "module": "esnext",
+        "moduleResolution": "node",
         "target": "es5",
         "jsx": "react",
         "allowSyntheticDefaultImports": true,
