--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.config.js --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --config webpack.dev.js --mode development",
+    "build": "webpack --config webpack.prod.js --mode production"
   },
   "author": "Tian Zhi",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@types/history": "^4.7.2",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-loadable": "^5.4.3",
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
     "antd": "^3.11.6",
@@ -21,6 +22,7 @@
     "history": "^4.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -34,9 +36,12 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
-    "typescript": "^3.2.2",
+    "typescript": "^3.1.6",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.2",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.1.5"
   }
 }
