--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^4.0.0-beta.3",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "source-map-loader": "^0.2.4",
