--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
     "antd": "^3.11.6",
+    "commander": "^2.19.0",
     "connected-react-router": "^6.0.0",
+    "fs-extra": "^7.0.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
