--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
         "paths": {
             "@src/*": ["src/*"],
             "@features/*": ["src/features/*"],
+            "@common/*": ["src/common/*"],
+            "@styles/*": ["src/styles/*"],
+            "@utils/*": ["src/utils/*"],
+            "@fakeData": ["src/features/common/fakeData.ts"],
+            "@map": ["src/features/common/map.ts"],
+            "@types": ["src/features/common/types.ts"]
         },
     },
     "include": [
