add: kit加入ts-simple-ast，编辑routeConfig

--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^4.0.0-beta.3",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
+    "ts-simple-ast": "^21.0.0",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.2",
