--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/history": "^4.7.2",
+    "@types/quill": "^2.0.1",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-loadable": "^5.4.3",
@@ -23,6 +24,7 @@
     "fs-extra": "^7.0.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
+    "quill": "^1.3.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
