--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
     "antd": "^3.11.6",
+    "axios": "^0.18.0",
     "commander": "^2.19.0",
     "connected-react-router": "^6.0.0",
     "fs-extra": "^7.0.1",
