--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.18.0",
     "commander": "^2.19.0",
     "connected-react-router": "^6.0.0",
+    "events": "^3.0.0",
     "fs-extra": "^7.0.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
