--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-loadable": "^5.4.3",
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-logger": "^3.0.7",
     "antd": "^3.11.6",
     "axios": "^0.18.0",
     "commander": "^2.19.0",
@@ -33,7 +34,9 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
