--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Psychological Counseling System FE",
   "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.dev.js --mode development",
-    "build": "webpack --config webpack.prod.js --mode production"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom"
   },
   "author": "Tian Zhi",
   "license": "ISC",
@@ -39,17 +39,29 @@
     "redux-saga": "^1.0.1"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
+    "@babel/core": "^7.3.4",
+    "autoprefixer": "^9.5.0",
+    "babel-loader": "^8.0.5",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^4.0.0-beta.5",
+    "http-proxy-middleware": "^0.19.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "react-dev-utils": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-import-plugin": "^1.5.5",
+    "ts-loader": "^5.3.3",
     "ts-simple-ast": "^21.0.0",
+    "tslint": "^5.14.0",
+    "tslint-loader": "^3.5.4",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
