--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "http-proxy-middleware": "^0.19.1",
@@ -54,18 +55,20 @@
     "react-dev-utils": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "ts-import-plugin": "^1.5.5",
     "ts-loader": "^5.3.3",
     "ts-simple-ast": "^21.0.0",
     "tslint": "^5.14.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.1.6",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.1.5"
   }
 }
