--- a/package.json
+++ b/package.json
@@ -59,8 +59,6 @@
     "ts-import-plugin": "^1.5.5",
     "ts-loader": "^5.3.3",
     "ts-simple-ast": "^21.0.0",
-    "tslint": "^5.14.0",
-    "tslint-loader": "^3.5.4",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
@@ -68,7 +66,6 @@
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.1.5"
+    "webpack-manifest-plugin": "^2.0.4"
   }
 }
