fix: using file loader properly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
             "@utils/*": ["utils/*"],
             "@fakeData": ["features/common/fakeData.ts"],
             "@map": ["features/common/map.ts"],
-            "@types": ["features/common/types.ts"]
+            "@types": ["features/common/types.ts"],
+            "@images/*": ["images/*"]
         },
     },
     "include": [
