--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/quill": "^2.0.1",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.0.11",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-loadable": "^5.4.3",
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
@@ -28,8 +29,10 @@
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "quill": "^1.3.6",
+    "quill-delta-to-html": "^0.10.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
