--- a/nginx.conf
+++ b/nginx.conf
@@ -39,9 +39,10 @@ http {
 
         #access_log  logs/host.access.log  main;
 
-        location /* {
+        location / {
             root   html;
             index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api {
