--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,30 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+
+    #开启和关闭gzip模式
+    gzip on;
+    
+    #gizp压缩起点，文件大于1k才进行压缩
+    gzip_min_length 1k;
+    
+    # gzip 压缩级别，1-9，数字越大压缩的越好，也越占用CPU时间
+    gzip_comp_level 6;
+    
+    # 进行压缩的文件类型。
+    gzip_types text/plain application/javascript application/x-javascript text/css application/xml text/javascript ;
+    
+    #nginx对于静态文件的处理模块，开启后会寻找以.gz结尾的文件，直接返回，不会占用cpu进行压缩，如果找不到则不进行压缩
+    # gzip_static on;
+    
+    # 是否在http header中添加Vary: Accept-Encoding，建议开启
+    gzip_vary on;
+
+    # 设置压缩所需要的缓冲区大小，以4k为单位，如果文件为7k则申请2*4k的缓冲区 
+    gzip_buffers 2 4k;
+
+    # 设置gzip压缩针对的HTTP协议版本
+    gzip_http_version 1.1;
 
     server {
         listen       80;
@@ -47,6 +70,17 @@ http {
 
         location /api {
             proxy_pass http://localhost:8081;
+        }
+
+        # 开启缓存
+        location ~* ^.+\.(ico|gif|jpg|jpeg|png|svg)$ { 
+            access_log   off; 
+            expires      30d;
+        }
+
+        location ~* ^.+\.(css|js|txt|xml|swf|wav)$ {
+            access_log   off;
+            expires      24h;
         }
 
         #error_page  404              /404.html;
