feat: cookie返回存在的一些问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -70,6 +70,9 @@ http {
 
         location /api {
             proxy_pass http://localhost:8081;
+
+            proxy_set_header Host $host;
+            # proxy_cookie_path  / /api;
         }
 
         # 开启缓存
