--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-loadable": "^5.4.3",
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-swipe": "^6.0.0",
     "@types/redux-logger": "^3.0.7",
     "antd": "^3.15.0",
     "axios": "^0.18.0",
@@ -30,16 +31,18 @@
     "lodash": "^4.17.11",
     "quill": "^1.3.6",
     "quill-delta-to-html": "^0.10.7",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-dom": "^16.7.0",
     "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-swipe": "^6.0.4",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.1"
+    "redux-saga": "^1.0.1",
+    "swipe-js-iso": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
